[project]
name = "data-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]
